Updated now playing page

--- a/ui/src/pages/Home.module.css
+++ b/ui/src/pages/Home.module.css
@@ -1,3 +1,11 @@
+.NowPlayingArt {
+  background-color: black;
+  width: 15.85em;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+/* 0000 */
+
 .DiscordLink {
   color: white;
 }
