--- a/ui/src/pages/Home.module.css
+++ b/ui/src/pages/Home.module.css
@@ -1,4 +1,35 @@
+.NowPlayingContainer {
+  display: inline-block;
+  position: relative;
+}
+
 .NowPlayingArt {
   width: 15.85em;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.NowPlayingMeta {
+  position: absolute;
+  bottom: 0;
+  transform: translateY(100%);
+  width: 100%;
+}
+
+.LyricsContainer {
+  width: 20.83em;
+  height: calc(15.85em - 10px);
+  border: 5px solid white;
+  border-radius: 25px 0 0 25px;
+  display: inline-block;
+  margin-right: 2em;
+}
+
+.DiscussContainer {
+  position: relative;
+  width: 20.83em;
+  height: calc(15.85em - 10px);
+  border: 5px solid white;
+  border-radius: 0 25px 25px 0;
+  display: inline-block;
+  margin-left: 2em;
 }
